# doc-chatter

./: .gitignore  404.html  Config  DEVELOPMENT.md  README.md  index.html  pyproject.toml  setup.cfg  setup.sh  sw.js  template.yaml
assets/: index-B4PcT9zq.js  index-BGbSGgD6.js  index-BWo1Wck6.js  index-BZ6YzqM5.css  index-BuJTtQkR.css  index-CLReeGKf.js  index-CMTnU_S4.js  index-Cil84DDo.js  index-DgweO6Ry.js  index-lB3bAJ2x.css
bash/: bb_workspace.sh  zshrc
doc/: brief.md  detailed-design.md  index.rst  mockup.html
events/: create-session.json  list-sessions.json  test-chat.json
frontend/: .env.template  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/e2e/: app.spec.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppSettingsPanel.tsx  ErrorBanner.tsx  ProfileManager.tsx  SessionForm.tsx  Sidebar.tsx  VoiceSettingsPanel.tsx
frontend/src/lib/: api.ts  app-settings.tsx  auth.tsx  config.ts  index.ts  mock-data.ts  sessions-context.tsx  sessions.ts  use-speech.ts  voice-settings.ts
frontend/src/pages/: ChatPage.tsx  (+4 more)
lambda/: .env.template  Cargo.toml
lambda/src/: auth.rs  bedrock.rs  config.rs  main.rs  service.rs  session.rs  tests.rs
lambda/src/dao/: session.rs
lambda/src/inference/: bedrock.rs
lambda/src/utils/: http.rs
scripts/: create-user.sh  get-token.sh  setup.sh  test-api.sh
scripts/src/: zshrc
tamper-monkey/: cloudwatch-highlight-time-gaps.js  cloudwatch-wrap-logs.user.js
test/: README.md  test_kibonges_utils.py
(+15 files in other folders)
