[package]
name = "doc-chatter"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# AWS Lambda
lambda_runtime = "1.0"
lambda_http = "1.0"

# AWS SDK
aws-config = "1.0"
aws-sdk-bedrockruntime = "1.0"
aws-sdk-s3 = "1.0"

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Env
dotenvy = "0.15"

# Error handling
anyhow = "1.0"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
aws-smithy-mocks = "0.2"
aws-smithy-runtime-api = "1.0"
aws-smithy-types = "1.0"
aws-sdk-s3 = { version = "1.0", features = ["test-util"] }
aws-sdk-bedrockruntime = { version = "1.0", features = ["test-util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
